--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body {
     display:flex;
     flex-flow: column wrap;
     justify-content: space-around;
-    height: 100%;
+     min-height: 100% ;
 }
 
 
