--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,8 @@ body {
     display:flex;
     flex-flow: column wrap;
     justify-content: space-around;
-     min-height: 100% ;
+    align-items: center;
+     height: 100%;
 }
 
 
