--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ body {
     flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
-     height: 100%;
+    height: 200px;
 }
 
 
