--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body {
 .grid-container{
     display: grid;
     grid-template:        'header'  120px
-                          'navbar'  200px
+                          'navbar'  auto
                           'main'    auto
                           'footer'   40px;
 }
@@ -33,7 +33,7 @@ body {
 .grid-container>* {
     box-shadow: -1px 1px 7px 0px rgb(0, 0, 0);
     border-radius: 10px;
-    
+    padding: 10px;
 }
 
 
