Correción de media.

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body {
     color: rgb(0, 70, 131);
     
 }
-@media (max-width: 768px) {
+
 .grid-container{
     display: grid;
     grid-template:        'header'  120px
@@ -60,7 +60,7 @@ body {
     display: flex;
     height: 100%;
     flex-flow: column wrap;
-    justify-content: center;
+    justify-content: space-around;
    
 
 }
@@ -83,4 +83,3 @@ body {
 }
 
 
-}
