--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import 'animate.css';
 
 
 *{
@@ -47,7 +48,7 @@ body {
     flex-flow:column wrap;
     justify-content: center;
     align-content: center;
-    align-items: center;
+    
     
 }
 /* ---------------------------------------------------------------------------------------- */
@@ -69,6 +70,13 @@ body {
     grid-area:  main;
 }
 
+.main-flex{
+    display:flex;
+    height: 100%;
+    flex-flow:column wrap;
+    justify-content: space-around;
+}
+
 /* ---------------------------------------------------------------------------------------- */
 .footer{
     
@@ -80,6 +88,8 @@ body {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 
