--- a/styles/style_form.css
+++ b/styles/style_form.css
@@ -83,15 +83,14 @@ body {
 .main-grid{
     display:grid;
     height: 100%;
-    justify-content: space-around;
-    align-items: start;
+    justify-content: space-between;
+    align-items: center;
     grid-template-columns: 300px ;
     grid-template-rows:    100px;
     grid-template-areas: 
                          "h1-main"
                          "receta1"
-                         "receta2"
-                         "receta3";
+                         "receta2";
     
 }
 
