--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
 
 .grid-container>* {
     /* box-shadow: -1px 1px 7px 0px rgb(0, 0, 0); */
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 10px;
 }
 
