--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ body {
     height: 100%;
 }
 
-
+/* ----------------------Medias Q-------------------------- */
 @media screen and (min-width: 450px) {
 
     .grid-container {
@@ -163,23 +163,27 @@ body {
 
 
     .main-grid {
-        border: 1px solid black;
+        
         display: grid;
         /* height: 100%; */
-        justify-content: space-around;
+        /* justify-content: space-around; */
         /* align-items: start; */
         /* grid-template-columns: 300px;
         grid-template-rows: 300px; */
         grid-template-areas:
             "h1-main" 
             "receta1" 
-            "receta2"
-            "receta3";
-    
+            
     }
-    .main-grid>*{
-        border: 1px solid black
+
+    .navbar-flex{
+        display:flex;
+        flex-flow: column wrap;
+        border:1px solid;
+        justify-content: space-between;
+        align-items: center;
     }
+   
 
 
 
